force-app/main/default/objects/BMCServiceDesk__SYSTabInfo__c/BMCServiceDesk__SYSTabInfo__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for tabs.</description>
    <label>Tabs Info</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SYSTabInfos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>