force-app/main/default/objects/BMCServiceDesk__SYSTabInfo__c/fields/BMCServiceDesk__childObject__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__childObject__c</fullName>
    <label>Child Object</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>