force-app/main/default/objects/BMCServiceDesk__SYSTabInfo__c/fields/BMCServiceDesk__editLink__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__editLink__c</fullName>
    <label>Edit Link</label>
    <length>255</length>
    <type>Text</type>
</CustomField>