force-app/main/default/objects/BMCServiceDesk__SYSTabInfo__c/fields/BMCServiceDesk__Fkey__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Fkey__c</fullName>
    <label>Fkey</label>
    <length>25</length>
    <required>true</required>
    <type>Text</type>
</CustomField>